--- a/SXNU_Questionnaire/SXNU_Questionnaire/SXNU_Questionnaire.csproj
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/SXNU_Questionnaire.csproj
@@ -334,6 +334,8 @@
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
     <Content Include="Scripts\jquery-ui-datepicker.js" />
+    <Content Include="Content\themes\base\jquery.loadmask.css" />
+    <Content Include="Scripts\jquery.loadmask.js" />
     <Content Include="Scripts\jquery.ui.datepicker.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
