--- a/SXNU_Questionnaire/SXNU_Questionnaire/SXNU_Questionnaire.csproj
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/SXNU_Questionnaire.csproj
@@ -322,6 +322,7 @@
     <Content Include="Areas\Admin\Views\Question\Subst.cshtml" />
     <Content Include="Areas\Admin\Views\Question\Modst.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_StShow.cshtml" />
+    <Content Include="Views\Ques\ViewAnswer.cshtml" />
     <None Include="Properties\PublishProfiles\ww.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\add_data.js" />
@@ -374,6 +375,7 @@
     <Content Include="Views\Ques\QuesFirstStep.cshtml" />
     <Content Include="Views\Ques\QuesTwoStep.cshtml" />
     <Content Include="Views\Ques\Answer.cshtml" />
+    <Content Include="Views\Ques\Preview.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Generate\" />
