--- a/SXNU_Questionnaire/SXNU_Questionnaire/SXNU_Questionnaire.csproj
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/SXNU_Questionnaire.csproj
@@ -227,6 +227,7 @@
     <Content Include="Content\images\more.jpg" />
     <Content Include="Content\images\nav_bj.jpg" />
     <Content Include="Content\images\niu.jpg" />
+    <Content Include="Content\images\no.jpg" />
     <Content Include="Content\images\quest.jpg" />
     <Content Include="Content\images\questio.jpg" />
     <Content Include="Content\images\sec.jpg" />
